# educational_rag_msc_project

./: .gitignore  README.md  dump.rdb
ed_rag/: .gitignore  README.md  app.py  celery_worker.py  pyproject.toml
ed_rag/ed_rag/: rag.py  test.py  trainer.py
ed_rag/web/: core.py
ed_rag/web/apis/: chats.py  healthcheck.py  history.py  tasks.py  upload.py
ed_rag/web/apis/db/: session.py
ed_rag/web/models/: Chat.py
ed_rag_fe/: package-lock.json  package.json
ed_rag_fe/public/: index.html
ed_rag_fe/src/: App.css  App.js  index.js
ed_rag_fe/src/Components/ChatBoxComponent/: ChatBoxComponent.js
ed_rag_fe/src/Components/ChatInterfaceComponent/: ChatInterfaceComponent.js
ed_rag_fe/src/Components/Dock/: DockComponent.js
ed_rag_fe/src/Components/MainComponent/: MainComponent.css  MainComponent.js
ed_rag_fe/src/Components/SidebarComponent/: SidebarComponent.css  SidebarComponent.js
ed_rag_fe/src/app/: api.js  store.js
ed_rag_fe/src/app/features/: chatSlice.js  historySlice.js
