[tool.poetry]
name = "ed-rag"
version = "0.1.0"
description = ""
authors = ["Durgesh Nandan <durgnan45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.6"
langchain-core = "^0.2.11"
langchain-community = "^0.2.6"
langchain-experimental = "^0.0.62"
langgraph = "^0.1.5"
langserve = {extras = ["all"], version = "^0.2.2"}
langchain-cli = "^0.0.25"
langsmith = "^0.1.83"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
